src/test/resources/fails/exc5.s
compile nios-ii de0

main:
    // duplicate compile
end

compile something-else